# RobocupSSL_HL

./: .gitignore  CMakeLists.txt  README.md  compile.sh  gen-coverage  main_cli.cpp  main_qt.cpp
Multivariable/: main.cpp
include/Control/: Navigator.h
include/GUI/: ConfigBox.h  MainBox.h  MiniMap.h
include/GUI/Tab/: GameTab.h  GenericTab.h  InOutTab.h  SimulatorTab.h
include/InOut/: InputStream.h  OutputStream.h  Packer.h  SerialOutputStream.h  UDPOutputStream.h
include/Logger/: Logging.h
include/Motion/: MotionControl.hpp  MotionControl.hpp~  TrapezoidalMotion.hpp
include/Pathfinder/: Path.hpp  Pathfinder.h  RRTPlanner.hpp  Tree.hpp
include/Simulator/: CameraModel.h  RobotDataContainer.h  RobotModel.h  SimulatorCore.h  Team.h
include/SoccerGame/: MovableObject.h  SoccerGame.h
include/SoccerGame/Ball/: Ball.h  BallId.h
include/SoccerGame/Exception/: RobocupException.h
include/SoccerGame/Field/: Field.h
include/SoccerGame/Game/: Game.h  GameFactory.h
include/SoccerGame/Player/: Player.h  PlayerId.h
include/SoccerGame/Referee/: Referee.h  RefereeListener.h
include/SoccerGame/Team/: Team.h  TeamId.h
include/Strategy/: AIConstants.hpp  CommandStruct.h  GameEvaluator.h  ParameterStruct.h  PlayEngine.h  Role.h  ScoreGameSituation.h  StrategySwitcher.h
include/Strategy/Play/: Play.h  PlayFinder.h
include/Strategy/Play/Playbook/: Idle.h  KickOff.h  Offense.h
include/Strategy/Skill/: DefendGoal.h  DriveToBall.h  DriveToPosition.h  DriveToTarget.h  SkillStateMachine.h
include/Strategy/Skill/SkillAtom/: Move.h  Skill.h  Stop.h
include/Strategy/Tactic/: DribbleToPosition.h  Goalie.h  Position.h  Tactic.h  TacticFinder.h
include/Utils/: Constants.hpp  Degree.h  GaussianModel.h  Line.h  Orientation.h  Pose.h  ProtoBuffWrapper.h  Radian.h  Vector2d.h  Vector2f.h  Velocity.h
include/Utils/Geometry2d/: Circle.hpp  CompositeShape.hpp  Line.hpp  Point.hpp  Rect.hpp  Segment.hpp  Shape.hpp  TransformMatrix.hpp  Utils.hpp
include/Vision/: RefereeListener.h  SSLVisionListener.h
python/: .gitignore  POC.cpp  README  Vector.hpp  main.c  main.cpp  main.h  main.hpp  position.py  run.sh  script.c  script.cpp  script.h  script.hpp
python/scripts/: .gitignore  boucle.py  cercle.py  junk.py  main.py  position.py
src/Control/: Navigator.cpp
src/GUI/: ConfigBox.cpp  MainBox.cpp  MiniMap.cpp
src/GUI/Tab/: GameTab.cpp  GenericTab.cpp  InOutTab.cpp  SimulatorTab.cpp
src/InOut/: InputStream.cpp  Packer.cpp  SerialOutputStream.cpp  UDPOutputStream.cpp
src/Logger/: Logging.cpp
src/Pathfinder/: Path.cpp  Pathfinder.cpp  RRTPlanner.cpp  Tree.cpp
src/Referee/: Referee.cpp
src/Simulator/: CameraModel.cpp  RobotDataContainer.cpp  RobotModel.cpp  SimulatorCore.cpp  Team.cpp
src/SoccerGame/: SoccerGame.cpp
src/SoccerGame/Ball/: Ball.cpp
src/SoccerGame/Field/: Field.cpp
src/SoccerGame/Game/: Game.cpp  GameFactory.cpp
src/SoccerGame/Player/: Player.cpp
src/SoccerGame/Referee/: Referee.cpp
src/SoccerGame/Team/: Team.cpp
src/Strategy/: GameEvaluator.cpp  PlayEngine.cpp  Role.cpp  StrategySwitcher.cpp
src/Strategy/Play/: Play.cpp  PlayFinder.cpp
src/Strategy/Play/Playbook/: Idle.cpp  KickOff.cpp  Offense.cpp
src/Strategy/Skill/: DefendGoal.cpp  DriveToBall.cpp  DriveToPosition.cpp  DriveToTarget.cpp  SkillStateMachine.cpp
src/Strategy/Skill/SkillAtom/: Move.cpp  Stop.cpp
src/Strategy/Tactic/: DribbleToPosition.cpp  Goalie.cpp  Position.cpp  Tactic.cpp  TacticFinder.cpp
src/Utils/: Degree.cpp  GaussianModel.cpp  Line.cpp  Orientation.cpp  Pose.cpp  ProtoBuffWrapper.cpp  Radian.cpp  Vector2d.cpp  Vector2f.cpp  Velocity.cpp
src/Utils/Geometry2d/: Circle.cpp  CompositeShape.cpp  Line.cpp  Rect.cpp  Segment.cpp  TransformMatrix.cpp  Utils.cpp
test/Control/: NavigatorTest.cc
test/Pathfinder/: PathfinderTest.cc
test/SoccerGame/: SoccerGameTest.cc
test/SoccerGame/Ball/: BallMock.h  BallTest.cc
test/SoccerGame/Field/: FieldMock.h  FieldTest.cc
test/SoccerGame/Game/: GameFactoryMock.h  GameFactoryTest.cc  GameMock.h  GameTest.cc
test/SoccerGame/Player/: PlayerMock.h  PlayerTest.cc
test/SoccerGame/Team/: TeamMock.h  TeamTest.cc
test/Strategy/: StrategySwitcherTest.cc
test/Utils/: DegreeTest.cc  OrientationTest.cc  PoseTest.cc  RadianTest.cc  Vector2dTest.cc  Vector2fTest.cc
